<resources>
    <string name="app_name">TP 1</string>
    <string name="visualiser_le_cycle_de_vie">Visualiser le cycle de vie</string>
    <string name="fake_activity">FAKE ACTIVITY</string>
    <string name="start_dialog">START DIALOG</string>
    <string name="quitter">QUITTER</string>
    <string name="name">name</string>
    <string name="hello_info">hello info</string>
    <string name="copier">copier</string>
    <string name="start_second_fake_activity">start second fake activity</string>
    <string name="close">close</string>
    <string name="dialog">dialog</string>
</resources>